--- a/doc/latex/pgfplots/pgfplots.libs.smithchart.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.smithchart.tex
@@ -71,7 +71,7 @@
     labels on the outside.
 
     \begin{pgfplotskey}{smithchart mirrored=\mchoice{true,false} (initially false)}
-        \paragraph{Attention:}
+        \textbf{Attention:}
 
         This key is deprecated. Its output does \emph{not} resemble Admittance
         Smith charts because the author failed to understand how to render them
