--- a/doc/latex/pgfplots/pgfplots.reference.axis-addplot.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.axis-addplot.tex
@@ -461,7 +461,6 @@ The coordinates as such can be numbers as |+5|, |-1.2345e3|, |35.0e2|,
 Furthermore, |coordinates| allows to define ``meta data'' for each coordinate.
 The interpretation of meta data depends on the visualization technique: for
 scatter plots, meta data can be used to define colors or style associations for
-every point (see \ref{pgfplots:scatterclasses} for an example). Meta
 data (if any) must be provided after the coordinates and after error bar bounds
 (if any) in square brackets:
 %
@@ -480,7 +479,6 @@ data (if any) must be provided after the coordinates and after error bar bounds
 \end{tikzpicture}
 \end{codeexample}
 %
-Please refer to the documentation of |point meta| at~\ref{sec:pgfplots:point:meta} for more information about per point meta
 data.
 
 The coordinate stream can contain |empty line|s to tell \PGFPlots{} that the
@@ -1402,7 +1400,7 @@ both file input and modifications by means of mathematical expressions.
             doubt, prefer using |\thisrow|\marg{column name}.
     \end{enumerate}
 
-    \paragraph{Attention:}
+    \textbf{Attention:}
 
     If your table has less than two rows, you may need to set
     |x index={},y index={}| explicitly. This is a consequence of the fact that
@@ -2009,7 +2007,6 @@ three-dimensional graphics is independent of Matlab. Thus, if you have a
 different tool, you need to read all that follows. However, users of Matlab
 \emph{can use a simplified export mechanism} which has been contributed by
 Jürnjakob Dugge. Please skip to Section~\ref{sec:plotgraphics3d:matlabscript}
- if you use Matlab to generate
 the graphics files (although you may want to take a brief look at the examples
 on the following pages to learn about flexibility or legends).
 
