--- a/doc/latex/pgfplots/pgfplots.reference.errorbars.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.errorbars.tex
@@ -7,7 +7,7 @@
 
 An error bar is used to indicate the reliability of a data point. Typically, a
 data point is just $(x,y)$. The reliability would be indicated by additional
-values, i.e.\@ by means of an error bound $\pgfplotserror{x}$ which
+values, i.e.\@ by means of an error bound $\epsilon_x$ which
 characterizes the difference between the coordinate $x$ provided in the plot
 data and the precise value $\tilde x$ (which is unknown). The reliability can
 be indicated for both $x$ and $y$ independently (although $y$ might be the
@@ -15,8 +15,8 @@ typical candidate). Error bounds can be expressed as \emph{absolute} errors,
 i.e.\@ of the form
 %
     \begin{equation*}
-        \lvert{x-\tilde x}\rvert \le \pgfplotserror{x}, \quad
-        \lvert{y-\tilde y}\rvert \le \pgfplotserror{y}
+        \lvert{x-\tilde x}\rvert \le \epsilon_x, \quad
+        \lvert{y-\tilde y}\rvert \le \epsilon_y
     \end{equation*}
 %
 where $\tilde x$ and $\tilde y$ are the (unknown) precise values and $x$ and
@@ -24,9 +24,9 @@ $y$ are the actual values of the plot. However, they can also be provided
 relative to the input values, i.e.\@ of the form
 %
     \begin{equation*}
-        \frac{\lvert{x-\tilde x}\rvert} {\lvert\tilde x\rvert} \le \pgfplotserror{x},
+        \frac{\lvert{x-\tilde x}\rvert} {\lvert\tilde x\rvert} \le \epsilon_x,
             \quad
-        \frac{\lvert{y-\tilde y}\rvert} {\lvert\tilde y\rvert} \le \pgfplotserror{y}.
+        \frac{\lvert{y-\tilde y}\rvert} {\lvert\tilde y\rvert} \le \epsilon_y.
     \end{equation*}
 %
 A relative error of $10\%$ would result in an error value of $0.1$ (relative to
@@ -34,8 +34,8 @@ the precise quantity $\tilde y$). Clearly, relative errors are only useful if
 the precise value if not zero, i.e.\@ $\tilde x, \tilde y \neq 0$.
 
 \PGFPlots{} allows to provide the ``error values'' for each coordinate
-independently. Thus, it may find some value $\pgfplotserror{x}$ and/or
-$\pgfplotserror{y}$. Depending on the configuration, it interprets the
+independently. Thus, it may find some value $\epsilon_x$ and/or
+$\epsilon_y$. Depending on the configuration, it interprets the
 encountered value as absolute or relative error. The error value can be the
 same for every coordinate, for example if you know that each~$y$-coordinate has
 a fixed error of $10\%$. The error value can also be different for every
@@ -72,7 +72,7 @@ The preceding example has two keys: |y dir=plus| configures \PGFPlots{} to
 |y explicit| tells \PGFPlots{} to expect \emph{absolute} values in the input
 data stream. In our case above, the input data stream is an
 |\addplot coordinates| which uses the special error value syntax
-|+- |$(\pgfplotserror{x}, \pgfplotserror{y})$, see the
+|+- |$(\epsilon_x, \epsilon_y)$, see the
 Section~\ref{sec:errorvalues:coords} for details.
 
 It is allowed if the input data contains more error values than needed: our
@@ -121,7 +121,7 @@ their own |error mark| and additional style arguments.
 \end{pgfplotsxykey}
 
 \begin{pgfplotsxykey}{error bars/\x\ fixed=\marg{value} (initially 0)}
-    Provides a common, absolute error $\pgfplotserror x=\text{\meta{value}}$
+    Provides a common, absolute error $\epsilon_x=\text{\meta{value}}$
     for all input coordinates.
     %
 \begin{codeexample}[]
@@ -141,24 +141,24 @@ their own |error mark| and additional style arguments.
 \end{tikzpicture}
 \end{codeexample}
 
-    For linear $x$-axes, the error mark is drawn at $x \pm \pgfplotserror x$
+    For linear $x$-axes, the error mark is drawn at $x \pm \epsilon_x$
     while for logarithmic $x$-axes, it is drawn at $\log( x \pm \pgfplotserror
     x)$.
 \end{pgfplotsxykey}
 
 \begin{pgfplotsxykey}{error bars/\x\ fixed relative=\marg{percent} (initially 0)}
-    Provides a common, relative error $\pgfplotserror x = \text{\meta{percent}}
+    Provides a common, relative error $\epsilon_x = \text{\meta{percent}}
     \cdot x$ for all input coordinates. The argument \meta{percent} is thus
     given relatively to input $x$-coordinates such that $\text{\meta{percent}}
     = 1$ means $100\%$.
 
-    Error marks are thus placed at $x \cdot (1 \pm \pgfplotserror x)$ for
-    linear axes and at $\log(x \cdot (1 \pm \pgfplotserror x))$ for logarithmic
+    Error marks are thus placed at $x \cdot (1 \pm \epsilon_x)$ for
+    linear axes and at $\log(x \cdot (1 \pm \epsilon_x))$ for logarithmic
     axes. Computations are performed in floating point for linear axis and
-    using the identity $\log(x \cdot (1 \pm \pgfplotserror x)) = \log(x) +
-    \log( 1 \pm \pgfplotserror x)$ for logarithmic scales.
+    using the identity $\log(x \cdot (1 \pm \epsilon_x)) = \log(x) +
+    \log( 1 \pm \epsilon_x)$ for logarithmic scales.
 
-    The following example shows that fixed error values $\pgfplotserror{x}$ are
+    The following example shows that fixed error values $\epsilon_x$ are
     independent of the input values.
     %
 \begin{codeexample}[]
