remove useless colorbox span

--- a/doc/latex/pgfplots/pgfmanual-en-macros.tex
+++ b/doc/latex/pgfplots/pgfmanual-en-macros.tex
@@ -1095,9 +1095,9 @@
 % the purpose of these extra-macros is to plug-in special tex4ht
 % instructions for the html version:
 \long\def\pgfmanual@codeexample@generate@graphic#1{%
-    \colorbox{graphicbackground}{\pgfmanual@codeexample@generate@graphic@{#1}}%
-}%
-\long\def\pgfmanual@codeexample@generate@graphic@#1{%
+%     \colorbox{graphicbackground}{\pgfmanual@codeexample@generate@graphic@{#1}}%
+% }%
+% \long\def\pgfmanual@codeexample@generate@graphic@#1{%
     \color{black}\ignorespaces%
     % \edef\pgfmanualmcatcode{\the\catcode`\^^M}%
     % \catcode`\^^M=9\relax%
