re-add lost lines

--- a/doc/latex/pgfplots/pgfplots.reference.2dplots.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.2dplots.tex
@@ -729,6 +729,7 @@ in one axis can be stacked on top of each other or aligned next to each other.
 
 \begin{pgfplotsxykey}{\x ticklabel interval boundaries}
     These are style keys which set |x tick label as interval| (see
+    \ref{key:pgfplots:ticklabelasinterval} for details) and configure
     the tick appearance to be \meta{start} -- \meta{end} for each tick
     interval.
 \end{pgfplotsxykey}
@@ -737,12 +738,12 @@ in one axis can be stacked on top of each other or aligned next to each other.
 \subsection{Histograms}
 
 This section has been moved to the |statistics| library, see
-
+Section~\ref{sec:histograms}.
 
 \subsection{Box Plots}
 
 This section has been moved to the |statistics| library, see
-
+Section~\ref{sec:boxplots}.
 
 \subsection{Comb Plots}
 
@@ -1880,6 +1881,7 @@ they contain only markers. They are enabled using the |only marks| key of
     options like size and color can be specified using the
     |mark options=|\meta{style options} key (or by modifying the |every mark|
     style). The available markers along with the accepted style options can be
+    found in Section~\ref{sec:markers}.
 \end{plottype}
 
     \label{pgfplots:scatter}
@@ -1944,6 +1946,8 @@ mandatory, the rest allows fine grained control over marker appearance options.
     as |scatter| is activated and no different choice has been made. It needs
     to be provided as \meta{option} for |\addplot| to configure the value used
     to determine marker appearances. Actually, |scatter src| is nothing but an
+    alias for |point meta|, so the main documentation for this key at~\ref{pgfplots:pointmeta}. 
+    However, we summarize the choices here
     together with scatter plot examples.
 
     Usually, |scatter src| provides input data (numeric or string type) which
@@ -2540,7 +2544,7 @@ First class is \ref{label:for:first:class}, second is \ref{label:for:second:clas
         \item |nodes near coords|,
         \item |scatter/classes|.
     \end{itemize}
-
+    See also the examples in Section~\ref{sec:coordinate:style}.
 \end{pgfplotskeylist}
 
 \begin{pgfplotskey}{scatter/position=\mchoice{absolute,relative} (initially relative)}
@@ -2792,6 +2796,7 @@ achieved using the |unbounded coords| key combined with coordinate values
 
     For plot expression and its friends, it is more likely to get very large
     floating point numbers instead of |inf|. In this case, consider using the
+    |restrict x to domain| key described at~\ref{key:restrict:x:to:domain}.
 
     The |unbounded coords=jump| method does also work for mesh/surface plots:
     every face adjacent to an unbounded coordinate will be discarded in this
@@ -2946,6 +2951,7 @@ other options about surface and mesh plots.
 \subsection{Polar Coordinates / Polar Axes}
 
 Polar coordinates can be provided in any kind of axis by means of
+|data cs=polar|, please refer to its reference documentation~\ref{key:data:cs}.
 
 Polar axes are available by means of |\usepgfplotslibrary{polar}|; please refer
 to Section~\ref{sec:polar}.
@@ -2954,11 +2960,11 @@ to Section~\ref{sec:polar}.
 \subsection{Tieline Plots}
 
 Tieline plots are a special application in |ternaryaxis|. They are part of
-
+|\usepgfplotslibrary{ternary}|; please refer to Section~\ref{sec:tieline}.
 
 \subsection{Smith Charts}
 
 Smith charts have a special coordinate system and a part of
 |\usepgfplotslibrary{smithchart}|; please refer to
-
+Section~\ref{sec:smithcharts}.
 }
