--- a/doc/latex/pgfplots/pgfplots.reference.axisdescription.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.axisdescription.tex
@@ -757,8 +757,7 @@ and alignment methods which are described below.
         labels are large, axis labels will move away from the axis. This is the
         default for every three dimensional plot, but it \emph{won't} be used
         initially for two-dimensional plots for backwards compatibility. Take a
-        look at the definition of |near ticklabel| on
-        page~\pageref{key:near:ticklabel} for an example.
+        look at the definition of |near ticklabel| for an example.
 
         The definition of these styles is
         %
@@ -794,8 +793,7 @@ and alignment methods which are described below.
         description of absolute, fixed distance to the axis. This is the
         initial configuration (for backwards compatibility with versions before
         1.3). Use |compat=1.3| to get the most recent, more flexible
-        configuration. Take a look at the definition of |near ticklabel| on
-        page~\pageref{key:near:ticklabel} for an example.
+        configuration. Take a look at the definition of |near ticklabel| for an example.
 
         These styles are defined by
         %
@@ -3484,8 +3482,8 @@ which is similar to the related method for legends, |legend to name|:
     outside of any picture, will cause the |colorbar| to be drawn.
 
 {
-    \pgfplotsmanualdisablecolorforref
-\begin{codeexample}[]
+    % \pgfplotsmanualdisablecolorforref
+\begin{codeexample}[code only]
     \pgfplotsset{footnotesize,samples=10, domain=0:1,point meta min=0, point meta max=1}
 \begin{center}% note that \centering uses less vspace...
     \begin{tikzpicture}
